# forexample

./: .gitignore
c++/destructor/: automatic.cpp
c++/functions/inputs/: a.out  input.cpp
c++/functions/outputs/: a.out  output.cpp
cmake/config_script/: CMakeLists.txt  README  config.cmake
cmake/ctest/: CMakeLists.txt
cmake/ctest/src/: a.out  main.cpp
cmake/ctest/test/functional/: 12_15.sh  toto.py
cmake/ctest/test/functional/.ropeproject/: globalnames
cmake/eclipse/src/: CMakeLists.txt  main.cpp
cmake/find_path/: CMakeLists.txt
ctypes/api/: main.py
ctypes/src/: mylib.c  mylib.h
cuda/hello_world/: README
cython/: README
cython/classes/: classes.cpp  classes.h  classes.pxd  setup.py  wrapper.pyx
cython/classes/.ropeproject/: globalnames
dlopen/: CMakeLists.txt  main.cpp  module.cpp  print_ref.cpp  print_ref.hpp
gtest/sample1/: CMakeLists.txt  main.cc
python/api/3.4/spam/: README  spammodule.c
swig/example/: README
swig/pair/: README  pair.h  pair.i
